developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Share__c/OJSERLIB__VEDA_Company_Share__c.object-meta.xml
<CustomObject>
    <label>VEDA Company Share</label>
    <nameField>
        <label>VEDA Company Shares Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VEDA Company Shares</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>