developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Share__c/fields/OJSERLIB__Class__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Class__c</fullName>
    <label>Class</label>
    <length>30</length>
    <type>Text</type>
</CustomField>