developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Share__c/fields/OJSERLIB__Number_of_Shares_Issued__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Number_of_Shares_Issued__c</fullName>
    <label>Number of Shares Issued</label>
    <length>6</length>
    <type>Text</type>
</CustomField>