developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Share__c/fields/OJSERLIB__Paid_Capital__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Paid_Capital__c</fullName>
    <label>Paid Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>