developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Share__c/fields/OJSERLIB__Total_Amount_Due_and_Payable__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Total_Amount_Due_and_Payable__c</fullName>
    <label>Total Amount Due and Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>